--- a/carousel.html
+++ b/carousel.html
@@ -11,16 +11,18 @@
     <div style="overflow: hidden;">
         <div class="slide-container">
             <div class="slide-box">
-                <img src="./3949079.png">
+                <img src="./img/3949079.png">
             </div>
             <div class="slide-box">
-                <img src="./3949091.jpeg">
+                <img src="./img/3949091.jpeg">
             </div>
             <div class="slide-box">
-                <img src="./v0ae8WM.png">
+                <img src="./img/v0ae8WM.png">
             </div>
         </div>
     </div>
+
+    <button class="before">이전</button>
 
     <button class="slide-1">1</button>
     <button class="slide-2">2</button>
@@ -28,7 +30,7 @@
 
     <button class="next">다음</button>
     <!-- 존재하는 사진의 개수에 따라서 달라지게끔 만들자 -->
-    <button class="before">이전</button>
+    
 
     <script>
         var photo = 1;
