--- a/Second/tab.html
+++ b/Second/tab.html
@@ -53,7 +53,9 @@
     <div class="container mt-5">
       
         <ul class="list">
-        <li class="tab-button">Products</li>
+        <li class="tab-button" data-idn="10">Products</li>
+        <!-- document.querySelector('.tab-button').dataset.idn -->
+
         <li class="tab-button orange">Information</li>
         <li class="tab-button">Shipping</li>
       </ul>
