--- a/1st/html/tutorial.html
+++ b/1st/html/tutorial.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./tutorial.css">
+    <link rel="stylesheet" href="../css/tutorial.css">
     <title>재시작</title>
 </head>
 
