--- a/2nd/html/Bubble.html
+++ b/2nd/html/Bubble.html
@@ -7,11 +7,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="./Bubble.css" rel="stylesheet">
+    <link href="../css/Bubble.css" rel="stylesheet">
     <title>이벤트 버블링</title>
     <!-- jquery 라이브러리 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
+        integrity="sha256-/xUj+3OJcsU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
     </script>
 </head>
 
