--- a/2nd/html/carousel.html
+++ b/2nd/html/carousel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./carousel.css" rel="stylesheet">
+    <link href="../css/carousel.css" rel="stylesheet">
     <title>캐러셀 만들기</title>
 </head>
 <body>
