--- a/2nd/html/Bubble.html
+++ b/2nd/html/Bubble.html
@@ -11,8 +11,7 @@
     <title>이벤트 버블링</title>
     <!-- jquery 라이브러리 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJcsU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
-    </script>
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
 <body>
