--- a/3rd/html/list.html
+++ b/3rd/html/list.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>데이터바인딩 Practice</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <div class="card">
           <img src="https://via.placeholder.com/600">
           <div class="card-body">
-            <h5>Card title</h5>
+            <h5>1번째 카드</h5>
             <p>가격 : 70000</p>
             <button class="btn btn-danger">주문하기</button>
           </div>
@@ -20,7 +21,7 @@
         <div class="card">
           <img src="https://via.placeholder.com/600">
           <div class="card-body">
-            <h5>Card title</h5>
+            <h5>2번째 카드</h5>
             <p>가격 : 70000</p>
             <button class="btn btn-danger">주문하기</button>
           </div>
@@ -28,7 +29,7 @@
         <div class="card">
           <img src="https://via.placeholder.com/600">
           <div class="card-body">
-            <h5>Card title</h5>
+            <h5>3번째 카드</h5>
             <p>가격 : 70000</p>
             <button class="btn btn-danger">주문하기</button>
           </div>
