3번째 - 캐러셀 스와이프 기능

--- a/2nd/html/carousel.html
+++ b/2nd/html/carousel.html
@@ -11,13 +11,13 @@
     <div style="overflow: hidden;">
         <div class="slide-container">
             <div class="slide-box">
-                <img src="./img/3949079.png">
+                <img src="../../img/3949079.png">
             </div>
             <div class="slide-box">
-                <img src="./img/3949091.jpeg">
+                <img src="../../img/3949091.jpeg">
             </div>
             <div class="slide-box">
-                <img src="./img/v0ae8WM.png">
+                <img src="../../img/v0ae8WM.png">
             </div>
         </div>
     </div>
